# ar_ghost_mentor

./: README.md
data/raw/screw_tightening/: screw_tightening_20260505_004453.json  screw_tightening_20260505_004525.json  screw_tightening_20260505_004542.json  screw_tightening_20260505_004621.json
data/sequences/: screw_tightening_master.json
ros2_ws/: learner_motion_data_20260504_174038.json
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ghost_mentor/lib/ghost_mentor/: ar_overlay_node  save_learner_data  score_dashboard  veteran_recorder
ros2_ws/install/ghost_mentor/share/ghost_mentor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/ghost_mentor/: package.xml
src/ghost_mentor/: setup.cfg  setup.py
src/ghost_mentor/ghost_mentor/: ar_overlay_node (사본).py  learner_motion_data_20260505_005346.json  learner_motion_data_20260505_005908.json  learner_motion_data_20260505_005926.json  score_dashboard.py
src/ghost_mentor/launch/: demo_launch.py
tools/: ghost_builder.py
