<?xml version="1.0"?>
<package format="3">
  <name>ghost_mentor</name>
  <version>0.1.0</version>
  <description>AR Ghost Mentor — 모바일 AR 노하우 전수 시스템</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
